@@ -64,6 +64,7 @@
 #include "load.h"
 #include "s3m.h"
 #include "period.h"
+#include "synth.h"
 
 #define MAGIC_SCRM	MAGIC4('S','C','R','M')
 #define MAGIC_SCRI	MAGIC4('S','C','R','I')
